--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             <input type="radio" name="Sexo_Socio" value="Femenino"> Femenino
             <br>
             Materia que Adeuda
-            <select id="Elegir_Mat" name="Elegir">
+            <select id="Elegir_Mat" name="Elegir" multiple>
                 <option value="Matematica">Matematica</option>
                 <option value="Lengua">Lengua</option>
                 <option value="Historia">Historia</option>
